--- a/products/index.html
+++ b/products/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>youtube-dl GUI</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="../style.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
@@ -13,7 +13,7 @@
 		<tr><td class='title'>
 			<div class="img" id='logo'>
 				<a target="_blank" href="https://erebyte.github.io">
-					<img src="res/Erebyte_Logo_head.png" alt="Erebyte">
+					<img src="../res/Erebyte_Logo_head.png" alt="Erebyte">
 				</a>
 			</div>
 		</td></tr>
@@ -27,10 +27,16 @@
 <div id='navi'>
 <table><tr>
 <td><a href="https://erebyte.github.io" class='button'>Home</a></td>
-<td><a href="products/index.html" class='button'>Products</a></td>
-<td><a href="about.html" class='button'>About</a></td>
+<td><a href="../products/index.html" class='button'>Products</a></td>
+<td><a href="../about.html" class='button'>About</a></td>
 <!-- <td><a href="#">Documentation</a></td> -->
 </tr></table>
+</div>
+
+<div id='products'>
+	<div id='title'>Youtube-dl GUI</div>
+	<div id='desc'>A user interface built on top of the youtube-dl and pafy api. Used to search for and download specific videos off youtube.</div>
+	<div id='link'><a href="https://erebyte.github.io/youtube-dl/"></a></div>
 </div>
 
 
