--- a/products/index.html
+++ b/products/index.html
@@ -12,7 +12,7 @@
 	<table>
 		<tr><td class='title'>
 			<div class="img" id='logo'>
-				<a target="_blank" href="https://erebyte.github.io">
+				<a href="https://erebyte.github.io">
 					<img src="../res/Erebyte_Logo_head.png" alt="Erebyte">
 				</a>
 			</div>
