--- a/products/index.html
+++ b/products/index.html
@@ -36,7 +36,7 @@
 <div id='products'>
 	<div id='title'>Youtube-dl GUI</div>
 	<div id='desc'>A user interface built on top of the youtube-dl and pafy api. Used to search for and download specific videos off youtube.</div>
-	<div id='link'><a href="https://erebyte.github.io/youtube-dl/"></a></div>
+	<div id='link'><a target='blank_' href="https://erebyte.github.io/youtube-dl/"></a></div>
 </div>
 
 
