--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
-<!DOCTYPE>
+b<!DOCTYPE>
 <html>
 <head>
-	<title>youtube-dl GUI</title>
+	<title>Erebyte - About</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
