--- a/products/index.html
+++ b/products/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
 <head>
-	<title>youtube-dl GUI</title>
+	<title>Erebyte</title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
