--- a/index.html
+++ b/index.html
@@ -1,38 +1,17 @@
 <!DOCTYPE>
 <html>
 <head>
-	<title>youtube-dl GUI</title>
+	<title>Erebyte</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="./res/templates.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
 
-<table><tr>
-<td><div id='titles'>
-	<table>
-		<tr><td class='title'>
-			<div class="img" id='logo'>
-				<a href="https://erebyte.github.io">
-					<img src="res/Erebyte_Logo_head.png" alt="Erebyte">
-				</a>
-			</div>
-		</td></tr>
-		<!-- <tr><td class='subtitle'>Subtitle</td></tr> -->
-	</table>
-</div></td>
-<td><div id='logos'></div></td>
-</tr></table>
-<hr>
+<div id="header"></div>
 
-<div id='navi'>
-<table><tr>
-<td><a href="https://erebyte.github.io" class='button'>Home</a></td>
-<td><a href="products/index.html" class='button'>Products</a></td>
-<td><a href="about.html" class='button'>About</a></td>
-<!-- <td><a href="#">Documentation</a></td> -->
-</tr></table>
-</div>
-
+<div id='navi'></div>
 
 </body>
 <footer>
