--- a/products/index.html
+++ b/products/index.html
@@ -1,44 +1,21 @@
 <!DOCTYPE>
 <html>
 <head>
-	<title>youtube-dl GUI</title>
+	<title>Erebyte - Products</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="http://twitter.github.com/hogan.js/builds/3.0.1/hogan-3.0.1.js"></script>
+	<script src="../res/templates.js"></script>
+	<script src="products.js"></script>
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
 
-<table><tr>
-<td><div id='titles'>
-	<table>
-		<tr><td class='title'>
-			<div class="img" id='logo'>
-				<a href="https://erebyte.github.io">
-					<img src="../res/Erebyte_Logo_head.png" alt="Erebyte">
-				</a>
-			</div>
-		</td></tr>
-		<!-- <tr><td class='subtitle'>Subtitle</td></tr> -->
-	</table>
-</div></td>
-<td><div id='logos'></div></td>
-</tr></table>
-<hr>
+<div id="header"></div>
 
-<div id='navi'>
-<table><tr>
-<td><a href="https://erebyte.github.io" class='button'>Home</a></td>
-<td><a href="../products/index.html" class='button'>Products</a></td>
-<td><a href="../about.html" class='button'>About</a></td>
-<!-- <td><a href="#">Documentation</a></td> -->
-</tr></table>
-</div>
+<div id='navi'></div>
 
-<div id='products'>
-	<div id='title'>Youtube-dl GUI</div>
-	<div id='desc'>A user interface built on top of the youtube-dl and pafy api. Used to search for and download specific videos off youtube.</div>
-	<div id='link'><a target='blank_' href="https://erebyte.github.io/youtube-dl/"></a></div>
-</div>
-
+<div id='products'></div>
 
 </body>
 <footer>
