--- a/play.html
+++ b/play.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Erebyte - About</title>
 	
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="https://twitter.github.com/hogan.js/builds/3.0.1/hogan-3.0.1.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="//twitter.github.com/hogan.js/builds/3.0.1/hogan-3.0.1.js"></script>
 
 	<script src="./res/templates.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
