-add hogan src file (sorry twitter)

--- a/play.html
+++ b/play.html
@@ -4,7 +4,7 @@
 	<title>Erebyte - About</title>
 	
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="//twitter.github.com/hogan.js/builds/3.0.1/hogan-3.0.1.js"></script>
+	<script src="/res/hogan-3.0.1.js"></script>
 
 	<script src="./res/templates.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
