--- a/products/index.html
+++ b/products/index.html
@@ -4,8 +4,8 @@
 
 	<title>Erebyte - Products</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="https://twitter.github.com/hogan.js/builds/3.0.1/hogan-3.0.1.js"></script>
-	<script src="../res/templates.js"></script>
+	<script src="/res/hogan-3.0.1.js"></script>
+	<script src="/res/templates.js"></script>
 	<script src="products.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="../style.css">
