--- a/products/index.html
+++ b/products/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE>
 <html>
 <head>
-
 	<title>Erebyte - Products</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="/res/hogan.js"></script>
 	<script src="/res/templates.js"></script>
-	<script src="products.js"></script>
+	<!-- <script src="products.js"></script> -->
 
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	
+	<script type="text/javascript">
+		$(document).ready(function(){
+
+			$.getJSON("products.json", function(json_data){
+				$("#products").load("/res/templates.html #products", function(){
+					var template = Hogan.compile($("#products").html());
+					var html = template.render(json_data);
+					$("#products").html(html);
+				});
+			});
+		});
+	</script>
 </head>
 <body>
 
