// JQuery.load fix // -fix qjuery.load "#id" to "#id > *"

--- a/res/templates.html
+++ b/res/templates.html
@@ -27,6 +27,7 @@
 </div>
 
 <div id="products">
+	<div>
 	{{#%}}{{#enabled}}
 	<div class="product_head">{{category}}</div>
 		{{#entries}}
@@ -35,4 +36,5 @@
 			<div id='link'><a target='blank_' href="{{href}}"></a></div>
 		{{/entries}}
 	{{/enabled}}{{/%}}
+	</div>
 </div>
