--- a/products/index.html
+++ b/products/index.html
@@ -14,7 +14,7 @@
 		$(document).ready(function(){
 
 			$.getJSON("products.json", function(json_data){
-				$("#products").load("/res/templates.html #products", function(){
+				$("#products").load("/res/templates.html #products > *", function(){
 					var template = Hogan.compile($("#products").html());
 					var html = template.render(json_data);
 					$("#products").html(html);
