--- a/play.html
+++ b/play.html
@@ -7,12 +7,13 @@
 	<script src="/res/hogan.js"></script>
 
 	<script src="./res/templates.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="play.css">
+
+	<link rel="stylesheet" type="text/css" href="/res/style.css">
+	<link rel="stylesheet" type="text/css" href="/res/play.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 	<script type="text/javascript">
-		//-=-=-=- Functions -=-=-=-//
+		//-=-=-=-=-=-=- Functions -=-=-=-=-=-=-//
 		$.urlParam = function(name){
 			// seperates and returns url parms
 			var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(window.location.href);
@@ -29,10 +30,6 @@
 			return this.charAt(0).toUpperCase() + this.slice(1);
 		}
 
-		String.prototype.replaceAll = function(s, r) {
-			return this.split(s).join(r);
-		}
-
 		String.prototype.titleize = function() {
 			var string_array = this.replaceAll('_',' ').split(' ');
 			string_array = string_array.map(function(str) {
@@ -41,21 +38,31 @@
 			return string_array.join(' ');
 		}
 
-		//-=- Embedding Code -=-//
-		var base_url;
+		String.prototype.replaceAll = function(s, r) {
+			// a simple replace all function (sorry im used to python)
+			return this.split(s).join(r);
+		}
+
+		//-=-=- Embedding Code -=-=-//
+		//const
 		var game_id = $.urlParam('g');
 		var game_title = game_id.titleize();
+		//gobals
+		var base_url;
+
+		// callbacks
 		$(document).ready(function () {
-			$('title').html("Erebyte - "+game_title)
+			$('title').html("Erebyte - "+game_title) // set title
 			base_url = "./games/"+game_id;
 			$.getJSON(base_url+"/manifest.json", function(json_data) {
-				//fills template
+				// fills template
 				var template = Hogan.compile($("#game").html());
 				var html = template.render(json_data.conf);
 				$("#game").html(html);
-				$('#game_footer').css('display', 'block'); // show info
-
+				$('#game_footer').css('display', 'block'); // show info +ani
+				//-=- local functions -=-//
 				var load_scripts = function () {
+					// Loads all scripts in manifest
 					for (var i=0; i<json_data.scripts.length; i++) {
 						var url = json_data.scripts[i].replace("./", base_url+"/");
 						var count = i;
@@ -65,34 +72,37 @@
 								$("#loader").css('display', 'none'); // clear loader
 							}
 						}).fail(function () {
-							console.log('fail');
+							console.log('failed to load script');
 						});
 					}
 				}
+				// game embedding code
 				if (json_data.conf.embeded == true) {
 					if (json_data.conf.enable_p5 == true) {
+						// if p5 is enabled
 						$.getScript("//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.3/p5.js", load_scripts);
 					}else {
 						load_scripts();
 					}
 				}else {
-					var url = "#";
-					var htm = '<a href="'+base_url+'"><div class="img-placeholder"><img src="'+json_data.conf.img_src+'" alt="'+json_data.conf.img_alt+'"></div></a>';
+					// if game is in seperate window (not embeded)
+					var img_src = json_data.conf.img_src || "http://placehold.it/720x250"
+					var htm = '<a href="'+base_url+'"><img src="'+img_src+'" alt="'+json_data.conf.img_alt+'"></a>';
 					$("#game_container").html(htm);
 					$("#loader").css('display', 'none'); // clear loader
 				}
 			}).fail(function (jqxhr, textStatus, error) {
+				//-=-=-=- If Fails to find and load a game -=-=-=-//
 				// var err = textStatus + ", " + error;
 				// console.log( "Request Failed: " + err );
 				// ^^ Log Error ^^ //
-				var responce = {};
+				var responce = {}; // fake responce data
 				responce.title = game_title + " (Not Found)"
 				responce.desc = "If you are seeing this message that means you are trying to access a game that does not exist. If you believe this to be a problem you can contact the site admin through some means... probably in the about section... so... yeah. <br/><br/>Bye (^.^)/"
-				//<img src="#" alt="img">
-				var img_htm = '<div class="img-placeholder"><a href="#"></a></div>'
+				var img_htm = '<img src="http://placehold.it/720x250"/>'
 				var template = Hogan.compile(img_htm + $("#game").html());
 				var html = template.render(responce);
-				$("#game").html(html);
+				$("#game").html(html); // fill template
 				$("#loader").css('display', 'none'); // clear loader
 				$('#game_footer').css('display', 'block'); // show info
 			});
