--- a/res/templates.html
+++ b/res/templates.html
@@ -1,3 +1,6 @@
+<!--> Standard Header 
+used across the head of all pages with id='header'
+<!-->
 <div id="header">
 	<table><tr>
 	<td><div id='titles'>
@@ -17,6 +20,9 @@
 <hr>
 </div>
 
+<!--> Standard Navigation
+used across the head of all pages with id='navi'
+<!-->
 <div id="navi">
 	<table><tr>
 	<td><a href="https://erebyte.github.io" class='button'>Home</a></td>
@@ -26,6 +32,10 @@
 	</tr></table>
 </div>
 
+<!--> Products template
+used:
+	/products/index.html #products
+<!-->
 <div id="products">
 	<div>
 	{{#%}}{{#enabled}}
