// resize img done //

--- a/products/index.html
+++ b/products/index.html
@@ -35,6 +35,7 @@
 </body>
 <footer>
 	<hr>
+	<img src="//erebyte.github.io/res/erebyte_logo_small.png">
 	<p>Copyright © 2016, Erebyte Ent., All Rights Reserved</p>
 </footer>
 </html>
