--- a/res/templates.html
+++ b/res/templates.html
@@ -8,7 +8,7 @@ used across the head of all pages with id='header'
 			<tr><td class='title'>
 				<div class="img" id='logo'>
 					<a href="https://erebyte.github.io">
-						<img src="https://erebyte.github.io/res/Erebyte_Logo_head.png" alt="Erebyte">
+						<img src="https://erebyte.github.io/res/erebyte_logo.png" alt="Erebyte">
 					</a>
 				</div>
 			</td></tr>
