--- a/res/templates.html
+++ b/res/templates.html
@@ -26,8 +26,8 @@ used across the head of all pages with id='navi'
 <div id="navi">
 	<table><tr>
 	<td><a href="https://erebyte.github.io" class='button'>Home</a></td>
-	<td><a href="/products/index.html" class='button'>Products</a></td>
-	<td><a href="/about.html" class='button'>About</a></td>
+	<td><a href="/products/index" class='button'>Products</a></td>
+	<td><a href="/about" class='button'>About</a></td>
 	<!-- <td><a href="#" class='button'>Documentation</a></td> -->
 	</tr></table>
 </div>
