// Bug Fixes and Patches // -- fix play loading error -- added post style -- changed about.html

--- a/about.html
+++ b/about.html
@@ -15,7 +15,13 @@
 
 <div id='navi'></div>
 
-<p>about text!!!!!</p>
+<div class='posts' id='about'>
+	<div class='post-head'>About:<hr></div>
+	<div class='post'>
+		About text not found...<br><br>
+		Sorry for the inconvenience.
+	</div>
+</div>
 
 </body>
 <footer>
