--- a/play.html
+++ b/play.html
@@ -49,7 +49,7 @@
 		var game_title = (game_id||'').titleize();
 		//gobals
 		var base_url = base_url || '.';
-		var game_url;
+		var game_url = game_url || './';
 
 		// callbacks
 		$(document).ready(function () {
