--- a/play.html
+++ b/play.html
@@ -61,7 +61,7 @@
 				var template = Hogan.compile($("#game").html());
 				var html = template.render(json_data.conf);
 				$("#game").html(html);
-				$('#game_footer').css('display', 'block'); // show info +ani
+				$('#game-footer').css('display', 'block'); // show info +ani
 				// game embedding code
 				if (json_data.conf.embeded == true) {
 					if (json_data.conf.enable_p5 == true) {
@@ -93,7 +93,7 @@
 					var html = template.render(responce);
 					$("#game").html(html); // fill template
 					$("#loader").css('display', 'none'); // clear loader
-					$('#game_footer').css('display', 'block'); // show info
+					$('#game-footer').css('display', 'block'); // show info
 				};
 				// try again //
 				base_url = "./games/"+game_id; // try: /games/gameId/manifest.json
@@ -132,9 +132,9 @@
 
 <div id="game">
 	<div id="loader"></div>
-	<div id="game_container"></div>
+	<div id="game-container"></div>
 
-	<div style='display:none' id="game_footer" class='animate-top'>
+	<div style='display:none' id="game-footer" class='animate-top'>
 		<div id="game-title">{{title}}</div>
 		<div id="game-desc">{{{desc}}}</div>
 	</div>
