--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 	<title>Erebyte</title>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.3/p5.js"></script>
 	<script src="/res/templates.js"></script>
+	<script src="/res/background_p5.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="/res/style.css">
+	<style type="text/css">
+		canvas { position:fixed; top:0; left:0; z-index:-1; }
+	</style>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
@@ -15,10 +20,13 @@
 
 <div id='navi'></div>
 
-</body>
+<div class="spacer"></div>
+
 <hr>
 <footer>
 	<img src="//erebyte.github.io/res/erebyte_logo_small.png">
 	<p>Copyright © 2016, Erebyte Ent., All Rights Reserved</p>
 </footer>
+
+</body>
 </html>
