fix up for maintainence

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 
 <div id='navi'></div>
 
+<div class='posts' id='about'>
+	<div class='post-head'>Maintenance:<hr></div>
+	<div class='post'>
+		Site is Under Maintenance...<br><br>
+		Sorry for the inconvenience.
+	</div>
+</div>
+
 <div class="spacer"></div>
 
 <hr>
