--- a/res/templates.html
+++ b/res/templates.html
@@ -17,7 +17,7 @@ used across the head of all pages with id='header'
 	</div></td>
 	<td><div id='logos'></div></td>
 	</tr></table>
-<hr>
+	<div class="ruler"></div>
 </div>
 
 <!--> Standard Navigation
