--- a/about.html
+++ b/about.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Erebyte - About</title>
 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.3/p5.js"></script>
 	<script src="/res/templates.js"></script>
@@ -34,6 +36,7 @@
 <footer>
 	<img src="//erebyte.github.io/res/erebyte_logo_small.png">
 	<p>Copyright © 2016, Erebyte Ent., All Rights Reserved</p>
+	<div class="ruler"></div>
 </footer>
 
 </body>
