--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <footer>
 	<img src="//erebyte.github.io/res/erebyte_logo_small.png">
 	<p>Copyright © 2016, Erebyte Ent., All Rights Reserved</p>
+	<div class="ruler"></div>
 </footer>
 
 </body>
