--- a/about.html
+++ b/about.html
@@ -25,14 +25,16 @@
 <div class='posts' id='about'>
 	<div class='post-head'>About:<hr></div>
 	<div class='post'>
-		About text not found...<br><br>
-		Sorry for the inconvenience.
+		About text not found...<br>
+		Sorry for the inconvenience.<br><br>
+		&lttemp&gt Erebyte is a Portfolio created by Kody Neely to house his various projects. Currently the site is under maintenance... Sorry for the inconvenience.
+		<br><br>
 	</div>
+	<div class="ruler"></div>
 </div>
 
 <div class="spacer"></div>
 
-<hr>
 <footer>
 	<img src="//erebyte.github.io/res/erebyte_logo_small.png">
 	<p>Copyright © 2016, Erebyte Ent., All Rights Reserved</p>
