--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 		Site is Under Maintenance...<br><br>
 		Sorry for the inconvenience.
 	</div>
+	<div class="ruler"></div>
 </div>
 
 <div class="spacer"></div>
 
-<hr>
 <footer>
 	<img src="//erebyte.github.io/res/erebyte_logo_small.png">
 	<p>Copyright © 2016, Erebyte Ent., All Rights Reserved</p>
