--- a/res/templates.html
+++ b/res/templates.html
@@ -43,7 +43,7 @@ used:
 		{{#entries}}
 			<div class='post'>
 				<div class='post-title'>{{title}}</div>
-				<div class='post-desc'>{{desc}}</div>
+				<div class='post-desc'>{{{desc}}}</div>
 				<div class='post-link'><a target='blank_' href="{{href}}"></a></div>
 			</div>
 		{{/entries}}
