cleaning test game

--- a/unused/games/test/index.html
+++ b/unused/games/test/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE>
 <html>
 <head>
-	<title>p5</title>
+	<title>Test-Game Page</title>
+	<!-- >
+	IMPORTANT : Do not delete! This page is used to test the functionality of non-imbedded games.
+
+	<!-->
 	<script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.3/p5.js"></script>
 	<!--script src="./lib/p5.play.js"></script!-->
 	<script src="./sketch.js"></script>
+	<script src="./test.js"></script>
 
 </head>
 <body>
