--- a/unused/games/test/index.html
+++ b/unused/games/test/index.html
@@ -8,8 +8,8 @@
 	<!-->
 	<script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.3/p5.js"></script>
 	<!--script src="./lib/p5.play.js"></script!-->
+	<script src="./engine.js"></script>
 	<script src="./sketch.js"></script>
-	<script src="./test.js"></script>
 
 </head>
 <body>
