--- a/about.html
+++ b/about.html
@@ -25,21 +25,23 @@
 <div class='posts' id='about'>
 	<div class='post-head'>About:<hr></div>
 	<div class='post'>
-		About text not found...<br>
-		Sorry for the inconvenience.<br><br>
-		&lttemp&gt Erebyte is a Portfolio created by Kody Neely to house his various projects. Currently the site is under maintenance... Sorry for the inconvenience.
+		<p>About text not found...</p> 
+		<p style="padding: 0px 0px 0px 10px;">Sorry for the inconvenience.</p>
 		<br><br>
+	</div>
+	<div class='post'>
+		<p>Temporary:</p> 
+		<p style="padding: 0px 0px 0px 10px;">
+			Erebyte is a Portfolio created by Kody Neely to house his various projects. Currently the site is under maintenance... Sorry for the inconvenience.
+			<br>
+		</p>
 	</div>
 	<div class="ruler"></div>
 </div>
 
 <div class="spacer"></div>
 
-<footer>
-	<img src="//erebyte.github.io/res/erebyte_logo_small.png">
-	<p>Copyright © 2016, Erebyte Ent., All Rights Reserved</p>
-	<div class="ruler"></div>
-</footer>
+<footer></footer>
 
 </body>
 </html>
