--- a/res/templates.html
+++ b/res/templates.html
@@ -1,4 +1,4 @@
-<!--> Standard Header 
+<!-- Standard Header 
 used across the head of all pages with id='header'
 <!-->
 <div id="header">
@@ -20,7 +20,16 @@ used across the head of all pages with id='header'
 	<div class="ruler"></div>
 </div>
 
-<!--> Standard Navigation
+<!-- Standard Footer 
+used across the footer of all pages with id='footer'
+<!-->
+<div id="footer">
+	<img src="//erebyte.github.io/res/erebyte_logo_small.png">
+	<p>Copyright © 2019, Erebyte Entertainment</p>
+	<div class="ruler"></div>
+</div>
+
+<!-- Standard Navigation
 used across the head of all pages with id='navi'
 <!-->
 <div id="navi">
@@ -32,7 +41,7 @@ used across the head of all pages with id='navi'
 	</tr></table>
 </div>
 
-<!--> Projects template
+<!-- Projects template
 used:
 	/projects/index.html #projects
 <!-->
