--- a/index.html
+++ b/index.html
@@ -25,19 +25,20 @@
 <div class='posts' id='about'>
 	<div class='post-head'>Maintenance:<hr></div>
 	<div class='post'>
-		Site is Under Maintenance...<br><br>
-		Sorry for the inconvenience.
+		<p>Site is Under Maintenance...</p>
+		<p style="padding: 0px 0px 0px 10px;">Sorry for the inconvenience.</p>
+		<br>
+		<p>Edit:</p> 
+		<p style="padding: 0px 0px 0px 10px;">
+			The major maintenance is complete, however, minor maintainence as well as project postings are currently being worked on. ( See: <a target='blank_' href="//erebyte.github.io/play?g=test">/play?g=test</a> )
+		</p>
 	</div>
 	<div class="ruler"></div>
 </div>
 
 <div class="spacer"></div>
 
-<footer>
-	<img src="//erebyte.github.io/res/erebyte_logo_small.png">
-	<p>Copyright © 2016, Erebyte Ent., All Rights Reserved</p>
-	<div class="ruler"></div>
-</footer>
+<footer></footer>
 
 </body>
 </html>
