--- a/play.html
+++ b/play.html
@@ -154,9 +154,7 @@
 </div>
 
 </body>
-<hr>
-<footer>
-	<img src="//erebyte.github.io/res/erebyte_logo_small.png">
-	<p>Copyright © 2017, Erebyte Ent., All Rights Reserved</p>
-</footer>
+
+<footer></footer>
+
 </html>
